# atomclaw

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  README_JA.md  partitions_atomclaw.csv  platformio.ini  sdkconfig.atomclaw_diagcfg  sdkconfig.defaults.atomclaw  sdkconfig.defaults.wifi_diag  sdkconfig.mimiclaw
cloudflare-worker/: worker.js  wrangler.toml
docs/: ATOMCLAW_SETUP.md  DEVICE_SETUP.md  LICENSE_NOTES.md
logs/: progress.md
main/: CMakeLists.txt  Kconfig.projbuild  atom_config.h  atom_main.c  atom_secrets.h.template  device_config.h  idf_component.yml  wifi_diag_main.c
main/agent/: atom_context.c  atom_context.h
main/bus/: message_bus.c  message_bus.h
main/cli/: serial_cli.c
main/cloudflare/: cf_history.c  cf_history.h
main/discord/: discord_server.c  discord_server.h
main/display/: display.c  display.h  display_m5unified.cpp
main/llm/: llm_proxy.c  llm_proxy.h
main/memory/: atom_session.c  atom_session.h  memory_store.c
main/proxy/: http_proxy.c
main/tools/: tool_display_text.c  tool_display_text.h  tool_files.c  tool_get_time.c  tool_registry.c  tool_set_atom_led.c  tool_set_atom_led.h  tool_web_search.c
main/wifi/: wifi_manager.c
